# Segmentacion-de-clientes-Samsung-SioW-SoW-y-Pow

analisis exploratorio/: analisis_exploratorio.ipynb  pyproject.toml
pogit y replicacion de resultados/: .gitignore  code1_survey.R  code2_survey_purchase.R  code2_survey_purchase_adaptado.R  code2_survey_purchase_copyS.R  code3_csv.R  code4 copy.jl  code5.R  code6.R  extraccion.R  fit_and_predict1.jl  fit_and_predict2.jl
pogit y replicacion de resultados/EMPogit.jl/: README.md
pogit y replicacion de resultados/EMPogit.jl/src/: EMPogit.jl  estep.jl  fit.jl  model.jl  mstep.jl  prec.jl  scratch.jl  summarize.jl  toy_data.jl  utils.jl
pogit y replicacion de resultados/EMPogit.jl/test/: runtests.jl
segmentacion de clientes/: pyproject.toml  segmentacion_clientes.ipynb
