[project]
name = "EDA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pyod>=2.0.7",
    "requests>=2.32.5",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
]
