[project]
name = "segmentacion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
