[project]
name = "segmentacion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gower>=0.1.2",
    "hdbscan>=0.8.42",
    "ipykernel>=6.31.0",
    "ipython>=8.18.1",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "scikit-learn-extra>=0.3.0",
    "seaborn>=0.13.2",
]
